--- a/Example/SwiftyNetworking/Base.lproj/Main.storyboard
+++ b/Example/SwiftyNetworking/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +20,63 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Qq-nb-sUi">
+                                <rect key="frame" x="97.5" y="572" width="180" height="55"/>
+                                <color key="backgroundColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="XF8-lv-cbC"/>
+                                    <constraint firstAttribute="width" constant="180" id="t9d-j4-vg3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <state key="normal" title="Fetch Data">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="fetchDataButtonAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="8uf-Mm-16a"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DAx-Nw-Dtk">
+                                <rect key="frame" x="30" y="55" width="315" height="190"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.88955479452054798" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="190" id="sOt-za-ocQ"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22K-Ap-Zor">
+                                <rect key="frame" x="102.5" y="275" width="170" height="50"/>
+                                <color key="backgroundColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="170" id="e7l-jO-bTG"/>
+                                    <constraint firstAttribute="height" constant="50" id="mCP-Th-bQc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <state key="normal" title="Download Image">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="DownloadImageButtonAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="HMY-DF-pv0"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="DAx-Nw-Dtk" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="30" id="9nG-rE-08v"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="8Qq-nb-sUi" secondAttribute="bottom" constant="40" id="KmS-HY-ruT"/>
+                            <constraint firstItem="DAx-Nw-Dtk" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="35" id="Led-Yn-3Z0"/>
+                            <constraint firstItem="8Qq-nb-sUi" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="SSA-Zw-Xyv"/>
+                            <constraint firstAttribute="trailing" secondItem="DAx-Nw-Dtk" secondAttribute="trailing" constant="30" id="TL0-gY-8gg"/>
+                            <constraint firstItem="22K-Ap-Zor" firstAttribute="top" secondItem="DAx-Nw-Dtk" secondAttribute="bottom" constant="30" id="m52-vG-fGc"/>
+                            <constraint firstItem="22K-Ap-Zor" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="v4X-5c-Riv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="DAx-Nw-Dtk" id="LCq-bS-buU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
